Fix: java8 Datetime Serialize 문제
jackson의 버전이 호환이 안돼서 생기는 문제이다 Redis에서 직렬화될 때 오류가 발생해서 Dto에 역/직렬화 설정 추가

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
     // for redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'org.springframework.session:spring-session-data-redis'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310' // for java8 datetime error
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
 }
 
 test {
